add swagger, middleware auth for get user count handler
